--- a/portfolio.html
+++ b/portfolio.html
@@ -89,6 +89,7 @@
                 </li>
                 <li><a href="portfolio.html">Portfolio</a>
                 </li>
+                <li><a href="studies.html">Studies</a></li>
             </ul>
         </nav>
         <main>
